# pico-usb-audio-loopback-plate-reverb

./: CMakeLists.txt  README.md
gui_app/: CMakeLists.txt  main.cpp
include/: bootsel_button.h  fx.h  fx_param.h  ringbuffer.h  tusb_config.h  usb_descriptors.h
pc_app/: CMakeLists.txt  main.cpp  reverb.cpp  reverb.h  test_reverb.cpp
reverb_lib/: CMakeLists.txt  reverb.cpp  reverb.h
src/: bootsel_button.c  fx_granular_rp2040.c  fx_reverb_rp2040.c  led.c  main.c  ringbuffer.c  usb_descriptors.c  usb_descriptors_composite.h
web/: index.html
